# compilers-spring

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  dot-call.sh  dot-def.sh  go.mod  go.sum  lab-01.tex  lab01_task7_1.wsd  lab01_task7_2.wsd  to_ir.sh
.github/workflows/: build.yml  golangci-lint.yml
assets/: example.c  example_factorial_iterative.c  example_rand.c
cmd/rust-parser/: rust-parser.go
cmd/ruster/: ruster.go
examples/: defense.rs  factorial.rs  factorial_while.rs  fibonacci.rs  find_substr.rs  gcd.rs  min.rs  string.rs
examples/invalid/semantics/: redefine_fn.rs  redefine_std.rs  redefine_upperscope.rs  redefine_vars.rs
examples/old/: gcd.rs
extras/fmt/: CMakeLists.txt
pkg/input/: input.go
pkg/librust/: dump_tokens.go  parse.go
pkg/librust/ast/: antlr_visitor_ruster.go  nodes_expressions.go  nodes_main.go  nodes_patterns.go  nodes_types.go  ruster_visitor.go  visitor_ruster_base.go  visitor_ruster_xml.go
pkg/librust/llvmir/: antlr_llvmir.go  antlr_ptrn_struct.go
pkg/librust/semantics/: antlr_semantics.go  antlr_semantics_revised.go  antlr_util.go
pkg/librust/symtab/: antlr_semantics_revised.go  antlr_symtab.go  antlr_util.go
scripts/: antlr4_build_go_runtime.sh  build.bat  build.sh  docker-run.bat  docker-run.sh  install_antlr4.sh  run.sh
src/: CMakeLists.txt
src/llir-graph/: CMakeLists.txt  main.cpp
src/llir-graph/cli/: cli.hpp  cli_check.hpp
src/llir-graph/graph/: call.hpp  def_use.hpp
src/proj/: CMakeLists.txt
test/e2e/: lexer_test.go
test/e2e/lexer/: lexer_test.go
(+8 files in other folders)
